# mkdocs-codeinclude-plugin

./: pyproject.toml
codeinclude/: plugin.py  resolver.py
